# c_icap_yara

./: Makefile.am  README.md  srv_yara.c  srv_yara.conf  yara_rules.sample
